# test1

./: .gitignore  Cargo.toml  testing_note.txt
sql/: cconversation.sql  cfollow.sql  cgroupconversation.sql  cgroupmembers.sql  cgroupmessage.sql  channel.sql  chome.sql  cmessage.sql  creaction.sql  crequest.sql  ctopreactions.sql  cuser.sql
src/: db_group_worker.rs  db_worker2.rs  db_workers.rs  dbb.rs  main.rs  wss.rs
src/controllers/: mod.rs
src/controllers/message_controller/: messagecontroller.rs  mod.rs  recent_message_controller.rs  recent_talk_controller.rs  routerfile.rs  ws_router.rs
src/controllers/message_controller_ws/: group_creation_controller.rs  group_message_controller.rs  messagecontroller.rs  mod.rs  send_request_controller.rs  ws_router.rs
src/controllers/user_controller/: mod.rs  routerfile.rs  usercontroller.rs
