[package]
name = "channelapi"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.31"
rs-snowflake = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres" ] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
