[package]
name = "channelapi"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
rs-snowflake = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres","chrono" ] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["cors"] }
